# jarvis

./: .gitignore  README.md  build.gradle.kts  package.json  pyproject.toml  requirements.txt  settings.gradle.kts
app/: build.gradle.kts  main.py  security.py
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jarvis/app/: OnboardingActivity.kt
app/src/main/java/com/jarvis/app/automation/: JarvisAccessibilityService.kt
app/src/main/java/com/jarvis/app/notifications/: JarvisNotificationListenerService.kt
app/src/main/res/layout/: activity_onboarding.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: jarvis_accessibility_service.xml
assistant-core/: build.gradle.kts
assistant-core/audio/: SpeechCaptureManager.kt  SpeechToTextProvider.kt  VoiceCommandPipeline.kt  VoiceForegroundServiceController.kt  WakeWordEngine.kt
assistant-core/audit/: ActionLogStore.kt
assistant-core/execution/: ExecutionOrchestrator.kt
assistant-core/nlu/: ActionPlan.kt  ActionPlan.schema.json  AssistantActionService.kt  IntentParser.kt  PlanValidator.kt
assistant-core/policy/: auditStore.js  confirmationManager.js  confirmationManager.test.js  riskCategories.js
device-actions/connectors/: AppLauncherConnector.js  BaseConnector.js  BrowserConnector.js  CapabilityRegistry.js  SmsConnector.js  WhatsAppConnector.js  index.js  types.js
jarvis_assistant/: __init__.py  assistant.py  cli.py  device.py  models.py  planner.py
templates/: dashboard.html
test/: connectors.test.js
tests/: test_planner.py  test_security.py
(+7 files in other folders)
